--- a/DatingApp/client/src/app/app.component.html
+++ b/DatingApp/client/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-nav></app-nav>
 
-<div class="container"></div>
+<div class="container">
+  <app-home></app-home>
+</div>
 
 <router-outlet></router-outlet>
