--- a/DatingApp/client/src/app/shared/components/nav/nav.component.html
+++ b/DatingApp/client/src/app/shared/components/nav/nav.component.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">DatingApp</a>
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active"
+      >DatingApp</a
+    >
     <button
       class="navbar-toggler"
       type="button"
@@ -18,23 +20,33 @@
         *ngIf="accountService.currentUser$ | async"
       >
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Matches</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            routerLink="/members"
+            routerLinkActive="active"
+            >Matches</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+            >Lists</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Messages</a>
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+            >Messages</a
+          >
         </li>
       </ul>
 
       <div
         class="dropdown"
-        *ngIf="accountService.currentUser$ | async"
+        *ngIf="accountService.currentUser$ | async as user"
         dropdown
       >
         <a class="dropdown-toggle text-light" dropdownToggle
-          >Welcome {{ (accountService.currentUser$ | async).username }}</a
+          >Welcome {{ user.username }}</a
         >
         <div class="dropdown-menu" *bsDropdownMenu>
           <a class="dropdown-item">Edit Profile</a>
@@ -67,7 +79,7 @@
           placeholder="password"
           aria-label="password"
         />
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-success" type="submit">Login</button>
       </form>
     </div>
   </div>
