--- a/DatingApp/client/src/app/shared/components/nav/nav.component.html
+++ b/DatingApp/client/src/app/shared/components/nav/nav.component.html
@@ -49,7 +49,7 @@
           >Welcome {{ user.username }}</a
         >
         <div class="dropdown-menu" *bsDropdownMenu>
-          <a class="dropdown-item">Edit Profile</a>
+          <a class="dropdown-item" routerLink="/members/edit">Edit Profile</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()">Log out</a>
         </div>
