--- a/DatingApp/client/src/app/shared/components/members/member-list/member-list.component.html
+++ b/DatingApp/client/src/app/shared/components/members/member-list/member-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngFor="let member of members" class="col-2">
+  <div *ngFor="let member of members$ | async" class="col-lg-2 col-md-4 col-6">
     <app-member-card [member]="member"></app-member-card>
   </div>
 </div>
