--- a/DatingApp/client/src/app/shared/components/members/member-edit/member-edit.component.html
+++ b/DatingApp/client/src/app/shared/components/members/member-edit/member-edit.component.html
@@ -11,8 +11,8 @@
   <div class="col-4">
     <div class="card">
       <img
-        src="{{ member.photoUrl || './assets/user.png' }}"
-        alt="{{ member.knownAs }}"
+        [src]="member.photoUrl || './assets/user.png'"
+        [alt]="member.knownAs"
         class="card-img-top img-thumbnail"
       />
       <div class="card-body">
@@ -22,7 +22,7 @@
         </div>
         <div>
           <strong>Age:</strong>
-          <p>{{ member.age }}</p>
+          <p>{{ member.age }} Years old</p>
         </div>
         <div>
           <strong>Last Active:</strong>
@@ -91,7 +91,7 @@
         </form>
       </tab>
       <tab heading="Edit Photos">
-        <p>Photo edit will go here</p>
+        <app-photo-editor [member]="member"></app-photo-editor>
       </tab>
     </tabset>
   </div>
