--- a/DatingApp/client/src/app/shared/components/nav/nav.component.html
+++ b/DatingApp/client/src/app/shared/components/nav/nav.component.html
@@ -45,7 +45,11 @@
         *ngIf="accountService.currentUser$ | async as user"
         dropdown
       >
-        <img [src]="user.photoUrl" [alt]="user.username" class="mx-2" />
+        <img
+          [src]="user.photoUrl || 'assets/user.png'"
+          [alt]="user.username"
+          class="mx-2"
+        />
 
         <a class="dropdown-toggle text-light" dropdownToggle
           >Welcome {{ user.username | titlecase }}</a
