--- a/DatingApp/client/src/app/shared/components/member-card/member-card.component.html
+++ b/DatingApp/client/src/app/shared/components/member-card/member-card.component.html
@@ -1,8 +1,8 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
     <img
-      src="{{ member.photoUrl || './assets/user.png' }}"
-      alt="{{ member.knownAs }}"
+      [src]="member.photoUrl || './assets/user.png'"
+      [alt]="member.knownAs"
       class="card-img-top"
     />
     <ul class="list-inline member-icons animate text-center">
@@ -29,7 +29,7 @@
   <div class="card-body p-1">
     <h6 class="card-title text-center mb-1">
       <i class="fa fa-user mr-2"></i>
-      {{ member.knownAs }}
+      {{ member.knownAs }}, {{ member.age }} years
     </h6>
     <p class="card-text text-muted text-center">{{ member.city }}</p>
   </div>
