--- a/DatingApp/client/src/app/shared/components/members/member-detail/member-detail.component.html
+++ b/DatingApp/client/src/app/shared/components/members/member-detail/member-detail.component.html
@@ -2,8 +2,8 @@
   <div class="col-md-4 col-sm-12 mb-sm-4 mb-md-0">
     <div class="card">
       <img
-        src="{{ member.photoUrl || 'assets/user.png' }}"
-        alt="{{ member.knownAs }}"
+        [src]="member.photoUrl || 'assets/user.png'"
+        [alt]="member.knownAs"
         class="card-img-top img-thumbnail"
       />
       <div class="card-body">
@@ -17,11 +17,11 @@
         </div>
         <div>
           <strong>Last Active:</strong>
-          <p>{{ member.lastActive }}</p>
+          <p>{{ member.lastActive | timeago }}</p>
         </div>
         <div>
           <strong>Member since:</strong>
-          <p>{{ member.created }}</p>
+          <p>{{ member.created | date: "dd MMM yyyy" }}</p>
         </div>
       </div>
       <div class="card-footer">
