--- a/DatingApp/client/src/app/shared/components/nav/nav.component.html
+++ b/DatingApp/client/src/app/shared/components/nav/nav.component.html
@@ -52,7 +52,7 @@
         />
 
         <a class="dropdown-toggle text-light" dropdownToggle
-          >Welcome {{ user.username | titlecase }}</a
+          >Welcome {{ user.knownAs | titlecase }}</a
         >
         <div class="dropdown-menu" *bsDropdownMenu>
           <a class="dropdown-item" routerLink="/members/edit">Edit Profile</a>
